# LearnGTEST

./: CMakeLists.txt  README.md  Read_me.md
include/: myCalculatorLib.h
src/: CMakeLists.txt  main.cpp  myCalculatorLib.cpp
test/: CMakeLists.txt  CMakeLists_old.txt  test.cpp
